native/native.tests/testData/compilerOutput/releaseCompilerAgainstPreReleaseLibrary/output.fir.txt
error: pre-release classes were found in dependencies. Remove them from the classpath, recompile with a release compiler or use '-Xskip-prerelease-check' to suppress errors
$TESTDATA_DIR$/releaseCompilerAgainstPreReleaseLibrary/source.kt:5:16: error: package 'a' is compiled by a pre-release version of Kotlin and cannot be loaded by this version of the compiler
fun baz(param: A, nested: A.Nested) {
               ^
$TESTDATA_DIR$/releaseCompilerAgainstPreReleaseLibrary/source.kt:5:27: error: package 'a' is compiled by a pre-release version of Kotlin and cannot be loaded by this version of the compiler
fun baz(param: A, nested: A.Nested) {
                          ^^^^^^^^
$TESTDATA_DIR$/releaseCompilerAgainstPreReleaseLibrary/source.kt:6:23: error: package 'a' is compiled by a pre-release version of Kotlin and cannot be loaded by this version of the compiler
    val constructor = A()
                      ^^^
$TESTDATA_DIR$/releaseCompilerAgainstPreReleaseLibrary/source.kt:7:18: error: package 'a' is compiled by a pre-release version of Kotlin and cannot be loaded by this version of the compiler
    val nested = A.Nested()
                 ^^^^^^^^^^
$TESTDATA_DIR$/releaseCompilerAgainstPreReleaseLibrary/source.kt:8:22: error: package 'a' is compiled by a pre-release version of Kotlin and cannot be loaded by this version of the compiler
    val methodCall = param.method()
                     ^^^^^
$TESTDATA_DIR$/releaseCompilerAgainstPreReleaseLibrary/source.kt:8:28: error: unresolved reference 'method'.
    val methodCall = param.method()
                           ^^^^^^
$TESTDATA_DIR$/releaseCompilerAgainstPreReleaseLibrary/source.kt:9:30: error: package 'a' is compiled by a pre-release version of Kotlin and cannot be loaded by this version of the compiler
    val supertype = object : A() {}
                             ^
$TESTDATA_DIR$/releaseCompilerAgainstPreReleaseLibrary/source.kt:11:13: error: package 'a' is compiled by a pre-release version of Kotlin and cannot be loaded by this version of the compiler
    val x = foo()
            ^^^^^
$TESTDATA_DIR$/releaseCompilerAgainstPreReleaseLibrary/source.kt:12:13: error: package 'a' is compiled by a pre-release version of Kotlin and cannot be loaded by this version of the compiler
    val y = bar
            ^^^
$TESTDATA_DIR$/releaseCompilerAgainstPreReleaseLibrary/source.kt:13:5: error: package 'a' is compiled by a pre-release version of Kotlin and cannot be loaded by this version of the compiler
    bar = 239
    ^^^
COMPILATION_ERROR
